# SALEc-public

./: CMakeLists.txt  LICENSE  README.md  README_en.md  SALEc.inp  SALEc_Burchell.inp  SALEc_Chicxulub.inp
eos/: aluminu.tillotson  eos-help.txt  iron___.tillotson  steel__.tillotson
src/: Error.c  Error.h  Ghost.c  Ghost.h  InputParser.c  InputParser.h  Iteration.c  Iteration.h  Output.c  Output.h  Parallelism.c  Parallelism.h  Reconstruction.c  Reconstruction.h  SALEc.c  Setup.c  Setup.h  State.c  State.h  Tracer.c  Tracer.h  Variable.c  Variable.h  WriteVtm.c
